--- a/src/index.scss
+++ b/src/index.scss
@@ -9,3 +9,13 @@ body {
 .back-two {
   background-color: green;
 }
+
+.carCard {
+  height: 100px;
+  width: 100px;
+  border: 2px solid black;
+  margin: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  display: inline-block;
+}
