completed functionality for MPG and HP, but still in metric units, not yet converted to standard measurement

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,12 +10,7 @@ body {
   background-color: green;
 }
 
-.carCard {
-  height: 100px;
-  width: 100px;
-  border: 2px solid black;
-  margin: 20px;
-  padding: 10px;
-  border-radius: 10px;
-  display: inline-block;
+.sliderContainer {
+  width: 50%;
+  margin: 0 auto;
 }
